Fix failing color contrast

--- a/src/datadoc/assets/progressbar_style.css
+++ b/src/datadoc/assets/progressbar_style.css
@@ -9,9 +9,10 @@
 #progress-bar-label{
     position: absolute;
     top: 145px;
-    left: 20%;
+    left: 25%;
     z-index: 1;
-    color: white;
+    color: #162327;
+    font-weight: 502;
 
 }
 progress::-webkit-progress-bar {
